--- a/zur/templates/pdf.html
+++ b/zur/templates/pdf.html
@@ -1,51 +1,112 @@
+{% load static %}
+<head>
+    <link rel="stylesheet" href="{% static 'my_css.css' %}">
+</head>
 
 <body>
- <h1>Rozliczenie zlecenia nr {{ order1.id }}</h1>
+<div class="invoice-box ">
+        <table cellpadding="0" cellspacing="0">
+            <tr class="top">
+                <td colspan="5">
+                    <table>
+                        <tr>
+                            <td class="title">
+                                <img src="https://www.logolynx.com/images/logolynx/d7/d7e640a486e20915b5bb035fc7a7e922.jpeg" style="width:100%; max-width:300px;">
+                            </td>
 
- <h3>Nabywca</h3>
- <table>
-  <tr>
-    <th>Nazwa zlecenia</th>
-    <td>{{ order1.tag_name }} </td>
-  </tr>
- <tr>
-    <th>Nazwa firmy</th>
-    <td>{{ order1.comp_name }} </td>
-  </tr>
- <tr>
-    <th>Adres</th>
-    <td>{{ order1.comp_local }} </td>
-  </tr>
+                            <td>
+                                Zlecenie nr : {{ order1.tag_name }}<br>
+                                Id zlecenia:{{ order1.id }} <br>
+                                Wygenerowano: {% now "SHORT_DATETIME_FORMAT" %}
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+
+            <tr class="information">
+                <td colspan="5">
+                    <table>
+                        <tr>
+                            <td>
+                               <div class="comp_header">Wykonawca:</div>
+                               {{ order1.comp_name }}<br>
+                                {{order1.comp_name.cmp_address }}<br>
+                                {{ order1.comp_name.cmp_address2}}<br>
+                                {{ order1.comp_name.cmp_tel }}
+                            </td>
+
+                            <td>
+                                <div class="comp_header">Zleceniodawca:</div>
+                                Example Company SA<br>
+                                Borowicka 8<br>
+                                55-178 Białystok<br>
+                                768-187-198
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
 
 
-</table>
-<h3>Produkty</h3>
- <table>
- <thead>
- <tr>
-     <th>Produkt</th>
-     <th>Jednostka</th>
-     <th>Ilość</th>
-     <th>Cena</th>
-     <th>Razem</th>
- </tr>
- </thead>
- <tbody>
 
-{% for item in order%}
- <tr class="row{% cycle "1" "2" %}">
-<td class="num">{{ item.name_material }} </td>
-     <td class="num">{{ item.get_unit_display }} </td>
-     <td class="num">{{ item.amount_material }}</td>
-     <td class="num">{{ item.cost_material }} zł</td>
-     <td class="num">{{ item.get_cost }} zł</td>
- </tr>
- {% endfor %}
- <tr class="total">
- <td colspan="3">Wartość całkowita</td>
-<td class="num">{{total_conv}} zł</td>
- </tr>
- </tbody>
- </table>
+
+            <tr class="heading">
+                <td>
+                   Produkt
+                </td>
+
+                <td>
+                    Jednostka
+                </td>
+                <td>
+                    Ilość
+                </td>
+                <td>
+                    Cena
+                </td>
+                <td>
+                    Razem
+                </td>
+            </tr>
+
+            <tr class="item">
+
+            </tr>
+            {% for item in order%}
+            <tr class="item">
+
+            <td class="num">{{ item.name_material }} </td>
+            <td class="num">{{ item.get_unit_display }} </td>
+            <td class="num">{{ item.amount_material }}</td>
+            <td class="num">{{ item.cost_material }} zł</td>
+            <td class="num">{{ item.get_cost }} zł</td>
+
+            </tr>
+  {% endfor %}
+
+
+
+            <tr class="total">
+                <td></td>
+
+                <td colspan="5">
+                   Razem: {{total_conv}} zł
+
+                </td>
+
+            </tr>
+            <tr><td>
+
+            </td>
+
+        </tr>
+
+        </table>
+    </div>
+
+
+
+
 
 </body>
