--- a/zur/templates/base.html
+++ b/zur/templates/base.html
@@ -9,11 +9,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'my_css.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
 
 
 </head>
@@ -25,51 +24,67 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/js/bootstrap-select.min.js"
+        integrity="sha512-yDlE7vpGDP7o2eftkCiPZ+yuUyEcaBwoJoIhdXv71KZWugFqEphIS3PU60lEkFaz8RxaVsMpSvQxMBaKVwA5xg=="
+        crossorigin="anonymous"></script>
+<link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.18/css/bootstrap-select.min.css"
+      integrity="sha512-ARJR74swou2y0Q2V9k0GbzQ/5vJ2RBSoCWokg4zkfM29Fb3vZEQyv0iWBMW/yvKgyHSR/7D64pFMmU8nYmbRkg=="
+      crossorigin="anonymous"/>
+
+
 {% block navbar %}
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="{% url 'index' %}">Start <i class="fas fa-play"></i></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <a class="navbar-brand" href="{% url 'tag_all' %}">Awarie <i class="fas fa-tools"></i></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <a class="navbar-brand" href="{% url 'tag_add' %}">Dodaj <i class="fas fa-folder-plus"></i></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <a class="navbar-brand" href="{% url 'graph.html' %}">Statystyka <i class="fas fa-chart-pie"></i> </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="dropdown show">
-        <a class="navbar-brand" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-           aria-haspopup="true" aria-expanded="false">
-           Rozliczenia <i class="fas fa-search-dollar"></i>
-        </a>
-
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="{% url 'urcost:cost_list' %}">Pokaż rozliczenia</a>
-            <a class="dropdown-item" href="{% url 'urcost:cost_add' %}">Dodaj</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-    </div>
-    <a style="position:  absolute; right: 0px;" class="navbar-brand" href="{% url 'logout' %}">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-sign-out-alt"></i> Wyloguj
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="{% url 'index' %}">Start <i class="fas fa-play"></i></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+                aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-    </a>
 
-</nav>
-{% endblock%}
+        <a class="navbar-brand" href="{% url 'tag_all' %}">Awarie <i class="fas fa-tools"></i></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+                aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <a  class="navbar-brand" href="{% url 'tag_add' %}">Dodaj <i class="fas fa-folder-plus"></i></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+                aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <a class="navbar-brand" href="{% url 'graph.html' %}">Statystyka <i class="fas fa-chart-pie"></i> </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
+                aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="dropdown show">
+            <a class="navbar-brand" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+               aria-haspopup="true" aria-expanded="false">
+                Rozliczenia <i class="fas fa-search-dollar"></i>
+            </a>
+
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" href="{% url 'urcost:cost_list' %}">Pokaż rozliczenia</a>
+                <a class="dropdown-item" href="{% url 'urcost:cost_add' %}">Dodaj</a>
+
+            </div>
+        </div>
+        <a style="position:  absolute; right: 0px;" class="navbar-brand" href="{% url 'logout' %}">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-sign-out-alt"></i>
+                Wyloguj
+            </button>
+        </a>
+        {% if request.user.is_staff %}
+            <a style="position:  absolute; right: 120px;" class="navbar-brand" href="{% url 'admin:index'%}">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fas fa-users-cog"></i></i>
+                Panel administracyjny
+            </button>
+        </a>
+    {% endif %}
+    </nav>
+{% endblock %}
 
 <link rel="stylesheet" href="{% static 'my_css.css' %}">
 {% block body %} {% endblock %}
@@ -78,12 +93,12 @@
 
 
 
-{%block footer%}
-<footer style="text-align: center; background: #343a40" class="footer  mt-auto py-3">
-    <div class="container">
-        <span class="text-white">2019 Copyright by Marcin Nieznalski</span>
-    </div>
-</footer>
-{%endblock%}
+{% block footer %}
+    <footer style="text-align: center; background: #343a40" class="footer  mt-auto py-3">
+        <div class="container">
+            <span class="text-white">Marcin Nieznalski</span>
+        </div>
+    </footer>
+{% endblock %}
 </body>
 </html>
