--- a/zur/templates/cost_list_view.html
+++ b/zur/templates/cost_list_view.html
@@ -1,68 +1,112 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block body %}
-<div  class="container graph_margin">
-    <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
-  <thead>
-    <tr>
+    <head>
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
+        <link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css ">
 
-      <th class="th-sm">Nazwa zlecenia
+        <script src="//code.jquery.com/jquery-3.3.1.js"></script>
+        <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+        <script src="//cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
 
-      </th>
+    </head>
 
-  <th class="th-sm">Nazwa firmy
+    <div class="container">
 
-      </th>
- <th class="th-sm">Adres
+        <span class="counter pull-right"></span>
+        <table id="myTable" class="table  table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+            <tr>
 
-      </th>
-         <th class="th-sm">Akcja
+                <th class="th-sm">Nazwa zlecenia
 
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-   {% for object in object_list %}
-    <tr>
-      <td>{{ object.tag_name }}</td>
-      <td>{{ object.comp_name }}</td>
-           <td>{{ object.comp_local}}</td>
-      <td><a  href="/costs/update/{{ object.id }}/" class="btn btn-dark">Edycja </a></td>
+                </th>
 
-    </tr>
-   {% endfor %}
+                <th class="th-sm">Nazwa firmy
 
-  </tbody>
-</table>
-</div>
+                </th>
+                <th class="th-sm">Adres
+
+                </th>
+                <th class="th-sm">Akcja
+
+                </th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for object in object_list %}
+                <tr>
+                    <td>{{ object.tag_name }}</td>
+                    <td>{{ object.comp_name }}</td>
+                    <td>{{ object.comp_name.cmp_address }}</td>
+                    <td><a href="/costs/update/{{ object.id }}/" class="btn btn-dark">Edycja </a>
+                        <a href="/costs/admin/order/{{ object.id }}/" class="btn btn-danger">Podgląd</a>
+                        <a href="/costs/admin/order/{{ object.id }}/pdf/" class="btn btn-secondary">PDF</a></td>
+
+                </tr>
+            {% endfor %}
+
+            </tbody>
+        </table>
+    </div>
+    <script>
+        $(document).ready(function () {
+            $('.dataTables_filter input').addClass('change_margin');
+            $('#myTable').dataTable({
+
+
+                "language": {
+                    "lengthMenu": "Pokaż _MENU_ rekordów na stronie",
+                    "zeroRecords": "Nie znaleziono",
+                    "info": "Strona _PAGE_ z _PAGES_",
+                    "infoEmpty": "Brak rekordów",
+                    "infoFiltered": "(filtrowanie z _MAX_ rekordów)",
+                    "search": "Wyszukaj:",
+                    "paginate": {
+                        "next": "Następna",
+                        "previous": "Poprzednia"
+                    }
+                },
+
+            });
+
+        });
+
+    </script>
+    <script>
+
+    </script>
 {% endblock %}
 
 
 
 <script>
     $(document).ready(function () {
-    $('#dtBasicExample').DataTable({
-    "pagingType": "simple",
-        "paging": true ,// false to disable pagination (or any other option)
-    "ordering": true,
-  });
-  $('.dataTables_length').addClass('bs-select');
-});
+        $('#dtBasicExample').DataTable({
+            "pagingType": "simple",
+            "paging": true,// false to disable pagination (or any other option)
+            "ordering": true,
+        });
+        $('.dataTables_length').addClass('bs-select');
+    });
 </script>
 
-<div  class="container graph_margin">
-<ul>
-    <!-- Iterate over object_list -->
-    {% for object in object_list %}
-    <!-- Display Objects -->
-    <li>{{ object.tag_name }}</li>
-    <li>{{ object.comp_name }}</li>
-        <a  href="/costs/update/{{ object.id }}/" class="btn btn-dark">Edycja </a>
+<div class="container graph_margin">
+    <ul>
+        <!-- Iterate over object_list -->
+        {% for object in object_list %}
+            <!-- Display Objects -->
+            <li>{{ object.tag_name }}</li>
+            <li>{{ object.comp_name }}</li>
+            <a href="/costs/update/{{ object.id }}/" class="btn btn-dark">Edycja </a>
 
-    <hr/>
-    <!-- If objet_list is empty  -->
-    {% empty %}
-    <li>No objects yet.</li>
-    {% endfor %}
-</ul>
-  </div>
+            <a href="/admin/order/{{ object.id }}/" class="btn btn-danger">Podgląd</a>
+
+            <hr/>
+            <!-- If objet_list is empty  -->
+            {% empty %}
+            <li>No objects yet.</li>
+        {% endfor %}
+    </ul>
+</div>
