--- a/zur/templates/tag_list.html
+++ b/zur/templates/tag_list.html
@@ -10,154 +10,156 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css">
     <link rel="stylesheet" href="//cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css ">
 
-    <table id="example"  class="table  table-striped table-bordered " align="center" style="width:80%;"  >
+    <table id="example" class="table  table-striped table-bordered " align="center" style="width:80%;">
         <thead>
-            <tr >
-                <th></th>
-                <th>Numer tagu</th>
-                <th>Urządzenie</th>
-                <th>Data dodania</th>
-                <th>Do kiedy wykonać ?</th>
-                <th style="text-align: left">Wykonane ?</th>
+        <tr>
+            <th></th>
+            <th>Numer tagu</th>
+            <th>Urządzenie</th>
+            <th>Dział odpowiedzialny</th>
+            <th>Data dodania</th>
+            <th>Do kiedy wykonać ?</th>
+            <th style="text-align: left">Wykonane ?</th>
 
 
-               <!-- <th>Data wykonania</th>
-                <th>Dział odpowiedzialny</th>
-                <th>Wykonane</th>
-               <th  style="width: 16%">Akcja</th>-->
+            <!-- <th>Data wykonania</th>
+             <th>Dział odpowiedzialny</th>
+             <th>Wykonane</th>
+            <th  style="width: 16%">Akcja</th>-->
 
-            </tr>
+        </tr>
         </thead>
 
     </table>
 
-  <script src="//code.jquery.com/jquery-3.3.1.js"></script>
-  <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-  <script src="//cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+    <script src="//code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script src="//cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
 
 
 
 
-  <script>
+    <script>
 
-    function format ( d ) {
-    // `d` is the original data object for the row
-    return '<table align="center" style="width:100%" cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">'+
-        '<tr>'+
-            '<td>Wystąpienie usterki:</td>'+
-            '<td>'+d.depart.name_dep+'</td>'+
-        '</tr>'+
-        '' +
-        '<tr>'+
-            '<td>Priorytet:</td>'+
-            '<td>'+d.priority.type_prior+'</td>'+
-        '</tr>'+
-            '<tr>'+
-            '<td>Dział odpowiedzialny:</td>'+
-            '<td>'+d.fix_dep.name_fix_cat+'</td>'+
-        '</tr>'+
-            '<tr>'+
-            '<td>Opis:</td>'+
-            '<td>'+d.explain+'</td>'+
-        '</tr>'+
-            '</tr>'+
-            '<tr>'+
-            '<td>Kategoria:</td>'+
-            '<td>'+d.work_cat.name_work_cat+'</td>'+
-        '</tr>'+
-            '</tr>'+
-            '<tr>'+
-            '<td>Data usunięcia usterki:</td>'+
-            '<td>'+d.fix_date+'</td>'+
-        '</tr>'+
-        ' <tr>'+
-            '<td>Akcja:</td>'+
-            '<td align="center" ><a href="/ur/edit/'+d.id+'/" class="btn btn-dark">Edytuj </a>\n'+
-             '<a  href="/ur/delete/'+d.id+'/" class="btn btn-dark">Usuń </a></td>'+
+        function format(d) {
+            // `d` is the original data object for the row
+            return '<table align="center" style="width:100%" cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
+                '<tr>' +
+                '<td>Wystąpienie usterki:</td>' +
+                '<td>' + d.depart.name_dep + '</td>' +
+                '</tr>' +
+                '' +
+                '<tr>' +
+                '<td>Priorytet:</td>' +
+                '<td>' + d.priority.type_prior + '</td>' +
+                '</tr>' +
+                '<tr>' +
+                '<td>Dział odpowiedzialny:</td>' +
+                '<td>' + d.fix_dep.name_fix_cat + '</td>' +
+                '</tr>' +
+                '<tr>' +
+                '<td>Opis:</td>' +
+                '<td>' + d.explain + '</td>' +
+                '</tr>' +
+                '</tr>' +
+                '<tr>' +
+                '<td>Kategoria:</td>' +
+                '<td>' + d.work_cat.name_work_cat + '</td>' +
+                '</tr>' +
+                '</tr>' +
+                ' <tr>' +
+                '<td>Akcja:</td>' +
+                '<td align="center" ><a href="/ur/edit/' + d.id + '/" class="btn btn-dark">Edytuj </a>\n' +
+                '<a  href="/ur/delete/' + d.id + '/" class="btn btn-dark">Usuń </a></td>' +
 
-        '</tr>'+
-    '</table>';
+                '</tr>' +
+                '</table>';
 
-}
+        }
 
 
-$(document).ready(function() {
-    var table = $('#example').DataTable( {
+        $(document).ready(function () {
+            var table = $('#example').DataTable({
 
 
-        "ajax": {
+                "ajax": {
 
-            url: "http://localhost:8000/ur/tags/?format=json",
+                    url: "http://localhost:8000/ur/tags/?format=json",
 
-             "dataSrc": ""
+                    "dataSrc": ""
 
-        },
+                },
 
-        "columns": [
+                "columns": [
 
-            {
-                "className":      'details-control',
-                "orderable":      false,
-                "data":           null,
-                "defaultContent": ''
+                    {
+                        "className": 'details-control',
+                        "orderable": false,
+                        "data": null,
+                        "defaultContent": ''
 
-            },
-
-
-            {data: "number" },
-            {data: "machine" },
-            {data: "add_date" },
-            {data: "expiry_date"},
-            {data: "is_done",
-
-                 "render": function ( data, type, full, meta ) {
-                if(data) {
-                    return '<div  <i class="fas fa-check-circle " style="color:forestgreen"/i>';
-                }
-                return '<i class="fa fa-times" style="color:red " > </i>';}},
+                    },
 
 
+                    {data: "number"},
+                    {data: "machine.machine_name"},
+                    {data: "fix_dep.name_fix_cat"},
+                    {data: "add_date"},
+                    {data: "expiry_date"},
+                    {
+                        data: "is_done",
 
-        ],
-        "order": [[1, 'asc']],
+                        "render": function (data, type, full, meta) {
+                            if (data) {
+                                return '<div  <i class="fas fa-check-circle " style="color:forestgreen"/i>';
+                            }
+                            return '<i class="fa fa-times" style="color:red " > </i>';
+                        }
 
+                    },
+
+
+
+                ],
+                "order": [[1, 'asc']],
 
 
                 "language": {
-            "lengthMenu": "Pokaż _MENU_ rekordów na stronie",
-            "zeroRecords": "Nie znaleziono",
-            "info": "Strona _PAGE_ z _PAGES_",
-            "infoEmpty": "Brak rekordów",
-            "infoFiltered": "(filtrowanie z _MAX_ rekordów)",
+                    "lengthMenu": "Pokaż _MENU_ rekordów na stronie",
+                    "zeroRecords": "Nie znaleziono",
+                    "info": "Strona _PAGE_ z _PAGES_",
+                    "infoEmpty": "Brak rekordów",
+                    "infoFiltered": "(filtrowanie z _MAX_ rekordów)",
                     "search": "Wyszukaj:",
                     "paginate": {
-        "next":       "Następna",
-        "previous":   "Poprzednia"
-    }},
+                        "next": "Następna",
+                        "previous": "Poprzednia"
+                    }
+                },
+
+
+            });
 
 
 
-    } );
+            // Add event listener for opening and closing details
+            $('#example tbody').on('click', 'td.details-control', function () {
+                var tr = $(this).closest('tr');
+                var row = table.row(tr);
 
-    // Add event listener for opening and closing details
-    $('#example tbody').on('click', 'td.details-control', function () {
-        var tr = $(this).closest('tr');
-        var row = table.row( tr );
+                if (row.child.isShown()) {
+                    // This row is already open - close it
+                    row.child.hide();
+                    tr.removeClass('shown');
+                } else {
+                    // Open this row
+                    row.child(format(row.data())).show();
+                    tr.addClass('shown');
+                }
+            });
 
-        if ( row.child.isShown() ) {
-            // This row is already open - close it
-            row.child.hide();
-            tr.removeClass('shown');
-        }
-        else {
-            // Open this row
-            row.child( format(row.data()) ).show();
-            tr.addClass('shown');
-        }
-    } );
+        });
 
-} );
-
-</script>
+    </script>
 
 {% endblock %}
